fix project img grid width on mobile

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1249,7 +1249,7 @@ footer {
   }
 
   .project-name-grid {
-    max-width: 19rem;
+    max-width: 20rem;
   }
   
   .project-name-grid {
